# somebar

./: .gitignore  README.md  meson.build
contrib/: ipc.patch
protocols/: meson.build  net-tapesoftware-dwl-wm-unstable-v1.xml
src/: bar.cpp  bar.hpp  bar_widget.cpp  bar_widget.hpp  common.hpp  config.def.hpp  config.hpp  line_buffer.hpp  main.cpp  shm_buffer.cpp  shm_buffer.hpp
